# interview-training

./: .gitignore  AGENTS.md  Ai面试训练产品设计讨论总结.docx  ai面试训练产品设计讨论总结.md  docker-compose.yml  nginx.conf
realtime-voice-prototype/server/: .env.example  pyproject.toml  requirements.txt
realtime-voice-prototype/server/app/: __init__.py  config.py  main.py
realtime-voice-prototype/server/app/api/: __init__.py  tts.py  voice_ws.py
realtime-voice-prototype/server/app/interview/: __init__.py  competencies.py  followup_strategies.py  models.py  modes.py  prompt_builder.py  roles.py  rubrics.py
realtime-voice-prototype/server/app/protocol/: __init__.py  client_events.py  server_events.py
realtime-voice-prototype/server/app/providers/: __init__.py
realtime-voice-prototype/server/app/providers/asr/: __init__.py  base.py  funasr_streaming.py
realtime-voice-prototype/server/app/providers/llm/: __init__.py  base.py  deepseek_streaming.py  selected.py  turn_completion_judge.py
realtime-voice-prototype/server/app/providers/tts/: edge.py
realtime-voice-prototype/server/app/session/: __init__.py  barge_in.py  manager.py  state.py  turn_completion.py  turn_controller.py  voice_activity.py
realtime-voice-prototype/server/realtime_voice_prototype_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
realtime-voice-prototype/server/scripts/: check_asr_environment.py
realtime-voice-prototype/server/tests/: test_barge_in.py  test_deepseek_streaming.py  test_funasr_streaming.py  test_interview_prompt_builder.py  test_protocol.py  test_turn_controller.py  test_voice_activity.py
(+160 files in other folders)
